Remove RestconfConstants.IDENTIFIER
This constant is not really useful, as it is referenced once in
production code and once in testing. Inline the definitions, as we
really want to make an explicit assertion in tests.

Change-Id: I7fd7a6e64562cb054b15011c1aad7624c47fea3d
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>